crates/python-connector/src/snapshots/python_connector__spec__test__specs_are_parsed_with_defaults.snap
---
source: crates/python-connector/src/spec.rs
expression: "(Spec::of_sentinel(&declared).unwrap(),\nSpec::of_sentinel(&serde_json::json!({\"package\": \"p\"})).unwrap(),\nSpec::of_sentinel(&serde_json::json!({\"spec\":\n    {\"configSchema\": {\"type\": \"object\"}}})).unwrap(),\nSpec::of_sentinel(&serde_json::json!({\"spec\":\n    {\"newerProperty\": true}})).unwrap(),\nSpec::of_sentinel(&serde_json::json!({\"spec\":\n    \"not an object\"})).unwrap_err().to_string(),)"
---
(
    Spec {
        config_schema: Object {
            "type": String("object"),
        },
        resource_config_schema: Object {
            "properties": Object {
                "name": Object {
                    "type": String("string"),
                },
            },
            "type": String("object"),
        },
        oauth2: Some(
            Object {
                "provider": String("acme"),
            },
        ),
    },
    Spec {
        config_schema: Object {},
        resource_config_schema: Object {},
        oauth2: None,
    },
    Spec {
        config_schema: Object {
            "type": String("object"),
        },
        resource_config_schema: Object {},
        oauth2: None,
    },
    Spec {
        config_schema: Object {},
        resource_config_schema: Object {},
        oauth2: None,
    },
    "invalid sentinel `spec`",
)
